# TiP-Recomp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  Migrate.bat  Play.bat  README.md  Rebuild.bat  RegenAndRebuild.bat  retip.toml  retip_config.toml  retip_manifest.toml  shaders.toml  water.dxbc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
EngineAssets/Models/Dragon/: model2.mtl
EngineAssets/Shaders/: Color.frag  Default.frag  Default.vert  GeoTest.frag  GeoTest.geom  GeoTest.vert  LitAlbedo.frag  LitAlbedoNormal.frag  LitAlbedoNormal.vert  ShadowMap.vert  Sky.frag  Sky.vert  Wireframe.frag  Wireframe.vert  light.vert  line.frag
Vendors/gli/: texture.hpp
Vendors/half/: half.hpp
WindowsScripts/: Play.bat  PlayConsole.bat  PlayDebug.bat
config/: retip_crt.toml  retip_ctx.toml  retip_ctx_ctr.toml  retip_functions.toml  retip_hooked.toml  retip_hooks.toml  retip_midasm.toml  retip_variables.toml  script_ida_to_toml.py  script_toml_to_hooks.py  script_toml_to_ida.py
dumps/: camera_struct.dump  sceneMainWorkspace_s.dump
mods/data/: aid_misc_pinata_tags_colours.vdat
mods/shaders/: 3FD806422EFD3AA1_000040000000001F.dxbc
packaged/: retip.toml
packaged/mods/BorderlessTag/: mod.toml
packaged/mods/DitherFix/: mod.toml
packaged/mods/DitherFix/shaders/: 014FB63C3B0B6AAD_000000000000007F.hlsl  0179A03DB5CE01E0_000000000000001F.hlsl  04AA5230B5F3779B_000000000000001F.hlsl  0EF0B616F5DBD794_00000000000000FF.hlsl  112010DEFC0FD977_000000000000003F.hlsl  1E6883FCCDE1F688_0000000000000000.hlsl  22C9CF641F240D45_000000000000001F.hlsl  31B63918D4CA94D3_000000000000003F.hlsl  473A032E50F8E6DA_000000000000003F.hlsl  53B5E396C6232D67_00000000000000FF.hlsl  61810D1CA423BA2D_000000000000001F.hlsl  69C6F5322DBEC8F2_000000000000003F.hlsl  7E6378569C62345B_000000000000003F.hlsl  8826AB28590EFF25_000000000000003F.hlsl  915BE74C64C07E36_000000000000007F.hlsl  A84BCB895109962E_000000000000001F.hlsl  AB51FD2E53F08976_000000000000001F.hlsl  BC05C983531A9931_000000000000003F.hlsl  C18FD2DEF4485DC5_000000000000001F.hlsl  C244A6E5761CD9FD_000000000000003F.hlsl  DC72CC3401C0E97A_000000000000007F.hlsl  E5D3C6FF805DD0DF_000000000000007F.hlsl  E8E7DC6D7F14063E_000000000000007F.hlsl  F61C348A756EC218_000000000000001F.hlsl  F8082192FA3351A4_000000000000007F.hlsl
packaged/mods/IceShader/: mod.toml
packaged/mods/IceShader/shaders/: 6E6F29256DEE8039_000000000000003F.hlsl
packaged/mods/PureTagColors/: mod.toml
packaged/mods/SolarCookiesTag/: mod.toml
packaged/mods/WaterFix/: mod.toml
packaged/mods/WaterFix/shaders/: 3FD806422EFD3AA1_000040000000001F.hlsl
src/: UsbCam.cpp  UsbCam.h  Webcam.h  main.cpp  retip_app.h
src/Shaders/: water_ps.hlsl
src/tip_engine/: CursorHooks.cpp  D3DTypes.h  DiscordRPC.cpp  DiscordRPC.h  Globals.h  GraphicsHooks.cpp  Log.h  SleepHooks.cpp  SleepHooks.h  SpaceHooks.cpp  Timer.h  hooks.cpp  hooks.h  rex_macros.h  version.h
src/tip_engine/CRT/: assetman.cpp  crt.h  math.cpp  models.cpp
src/tip_engine/CustomRenderer/: OpenGL_Stuff.h  Window.cpp  Window.h
src/tip_engine/CustomRenderer/engine/: GlobalSettings.h  SolarEngine.cpp
src/tip_engine/CustomRenderer/engine/Actors/: Actor.cpp  Actor.h  DebugGridActor.h  SkyboxActor.h  VertexPreviewActor.h
src/tip_engine/CustomRenderer/engine/Actors/Lights/: APointLight.h
src/tip_engine/CustomRenderer/engine/Components/: Component.cpp  Component.h
src/tip_engine/CustomRenderer/engine/Components/Lights/: LightComponent.cpp  LightComponent.h
src/tip_engine/CustomRenderer/engine/Components/Meshes/: DynamicMeshComponent.cpp  DynamicMeshComponent.h
src/tip_engine/CustomRenderer/engine/Shaders/: DebugDraw.h  EBO.cpp  EBO.h  FrameBuffer.cpp  FrameBuffer.h  Material.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VAO.h  VBO.cpp  VBO.h
src/tip_engine/CustomRenderer/engine/Subsystems/: Types.h
src/tip_engine/CustomRenderer/engine/Subsystems/Saving/: SaveManager.h
src/tip_engine/CustomRenderer/engine/Temporary/: Model.h
src/tip_engine/CustomRenderer/engine/Utils/: Clock.h  ZLibHelpers.h
src/tip_engine/CustomRenderer/engine/Windows/: ViewportWindow.cpp  ViewportWindow.h
src/tip_engine/CustomRenderer/engine/World/: Camera.cpp  Camera.h  CameraClass.cpp  CameraClass.h  World.cpp  World.h
src/tip_engine/Input/: TipMouseListener.h  TipRawMouse.h
src/tip_engine/Overlays/: CameraPreview.h  DebugInfo.h  Fps.cpp  Fps.h  LaunchMenu.cpp  LaunchMenu.h  OldFps.cpp  QuitMenu.cpp  QuitMenu.h  SmartStyles.h  StartupOverlay.h  TiPTools.cpp  TiPTools.h  TiPWidgets.h
src/tip_engine/Overlays/TiPTools/: GraphicsMenu.cpp  GraphicsMenu.h  PinataMenu.cpp  PinataMenu.h  PlantMenu.cpp  PlantMenu.h  PlayerMenu.cpp  PlayerMenu.h  RuffianMenu.cpp  RuffianMenu.h  SettingsMenu.cpp  SettingsMenu.h  ShovelMenu.cpp  ShovelMenu.h  SpawnMenu.cpp  SpawnMenu.h  UpscalingMenu.cpp  UpscalingMenu.h
src/tip_engine/Types/: CommonTypes.h  CursorInstance.h  ModelFormat.h  ReqTypes.h  VivaClassTypes.h  VivaTags.h
